# Coding-rl

./: README.md  pyproject.toml
configs/: reward_default.yaml
docs/: acceptance.md  llm-adapter.md  research-notes.md
swegraph/: __main__.py  actions.py  cli.py  evaluator.py  prm.py  reward.py  sandbox.py  schema.py  task.py  tests_runner.py  trajectory.py
swegraph/baselines/: __init__.py  do_nothing.py  llm_adapter.py  llm_mock.py  naive_search_replace.py  oracle_patch.py
swegraph/baselines/adversarial/: __init__.py  conftest_shadow.py  fixture_monkeypatch.py  public_test_overfit.py  test_content_edit.py
swegraph/fixtures/repos/csv_tool/: README.md  pyproject.toml
swegraph/fixtures/repos/multi_pkg/: README.md  pyproject.toml
swegraph/fixtures/repos/reqparse_lite/: README.md  pyproject.toml
swegraph/ingest/: __init__.py  mutators.py  survival.py  task_factory.py  test_split.py
swegraph/task_generators/: __init__.py  bug_injection.py  causal_hop.py  config_bug.py  feature_addition.py
swegraph/utils/: diffing.py  file_guard.py  import_graph.py  metamorphic_extract.py  prompts.py
swegraph/validators/: __init__.py  metamorphic.py  property.py  unit_test.py
swegraph/validators/_runners/: _strategy.py  metamorphic_runner.py  property_runner.py
tests/: test_adversarial_baselines.py  test_baselines.py  test_causal_hop.py  test_evaluator.py  test_hardened_guards.py  test_ingest_mutators.py  test_ingest_pipeline.py  test_llm_adapter.py  test_oracle_baseline.py  test_prm.py  test_reward.py  test_reward_config.py  test_task_generation.py  test_validators.py
(+25 files in other folders)
